# griptape-chrome-extension

./: .gitignore  README.md  TODO.md  manifest.json
griptape-cloud-structure/: .gitignore  README.md  pyproject.toml  structure.py
src/: background.js  content.js  panel.css  panel.html  panel.js  sidepanel.css  sidepanel.html
