[tool.poetry]
name = "griptape-browser-extension"
version = "0.1.0"
description = ""
authors = ["Ian Massingham <ian@griptape.ai>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
griptape = {extras = ["all"], version = "^1.3.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
